--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "start_url": "index.html",
     "display": "standalone",
     "background_color": "#000000",
-    "theme_color": "#2240b2",
+    "theme_color": "#000000",
     "icons": [
       {
         "src": "android/android-launchericon-512-512.png",
